--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@pinecone-database/pinecone": "^0.1.6",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "langchain": "^0.0.101",
